Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         desc: 'KPIs gerais, metas, YoY, lojas e vendedoras.',
         color: '#0ea5e9',
         items: [
-          { kind:'link',  title:'Dashboard Desempenho Geral', desc:'Painel consolidado do varejo.', url:'https://app.powerbi.com/view?r=eyJrIjoiZDgzZjc4ZTAtNjFlYi00ODkxLWJhNjQtZTY3YWYyZjM4NzdiIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' },
+          { kind:'link',  title:'Dashboard Desempenho Geral', desc:'Painel consolidado do varejo.', url:'' },
           { kind:'folder', title:'Dashboard das Gerentes', desc:'Dashboards por loja (uma página por filial).', key:'gerentes',
             children:[
-              { title:'Loja Leblon', desc:'Painel da loja Leblon.', url:'https://app.powerbi.com/view?r=eyJrIjoiMTM4ODExNzQtOGNjMy00YWY5LTlmYjgtMzI1MWM0MGI5MDVmIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' },
-              { title:'Loja JK',     desc:'Painel da loja JK.',     url:'https://app.powerbi.com/view?r=eyJrIjoiN2VlMWU3YzktNDA2Yi00MTQ5LTlhODQtNTk3YWE2ZjIzMDA5IiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' },
-              { title:'Loja RDB',    desc:'Painel da loja RDB.',    url:'https://app.powerbi.com/view?r=eyJrIjoiOTA4NGRkMjgtZDM0Zi00ZTlhLTg4NzQtMDAwMmNkZDhhYzljIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' }
+              { title:'Loja Leblon', desc:'Painel da loja Leblon.', url:'' },
+              { title:'Loja JK',     desc:'Painel da loja JK.',     url:'' },
+              { title:'Loja RDB',    desc:'Painel da loja RDB.',    url:'' }
             ]
           }
         ]
@@ -76,7 +76,7 @@
         desc: 'Mix de produtos, giros e estoque por loja/coleção.',
         color: '#22c55e',
         items: [
-          { kind:'link', title:'Dashboard de Produtos', desc:'Desempenho de produtos e estoque.', url:'https://app.powerbi.com/view?r=eyJrIjoiNzg0MjMzYjAtMzY0Ny00MDVlLTk1NTEtYzJlNDYwOWQzNDhkIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' }
+          { kind:'link', title:'Dashboard de Produtos', desc:'Desempenho de produtos e estoque.', url:'' }
         ]
       },
       despesas: {
@@ -84,7 +84,7 @@
         desc: 'Custos, despesas e rentabilidade.',
         color: '#f59e0b',
         items: [
-          { kind:'link', title:'Dashboard de Despesas', desc:'Resumo por centro de custo.', url:'https://app.powerbi.com/view?r=eyJrIjoiY2M3YzUzZWEtODljYi00NTc2LWEwNzgtMTFkNGZlZTQ3MjNlIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' }
+          { kind:'link', title:'Dashboard de Despesas', desc:'Resumo por centro de custo.', url:'' }
         ]
       },
       clientes: {
@@ -94,11 +94,11 @@
         items: [
           { kind:'folder', title:'Clientes', desc:'Painel principal e análises complementares.', key:'clientes',
             children:[
-              { kind:'link', title:'Dashboard de Clientes', desc:'Visão geral de clientes.', url:'https://app.powerbi.com/view?r=eyJrIjoiNzdkMjJkMzMtZGZhYi00YmUyLTkzMjQtZTlhNGUyZWJlNzYyIiwidCI6IjFkYmZiOTM5LTM5MWMtNDcwZC05MmRmLTlhZjQ5NzVlMjdjNSJ9' },
+              { kind:'link', title:'Dashboard de Clientes', desc:'Visão geral de clientes.', url:'' },
               { kind:'folder', title:'Análises com Python', desc:'Links de análises no Colab.', key:'analises-python',
                 children:[
                   { title:'Análise de Clusters no Tempo', desc:'Descreve o desenvolvimento do número de clientes por clusters ao longo dos anos (2021-2025).', url:'https://colab.research.google.com/drive/1IIAspcojPGn0iRZ6WWt5CCdY9Vakdd19#scrollTo=7zPu9tWonIg7' },
-                  { title:'Análise da Participação dos Clusters nas Vendas das Lojas', desc:'Analisa a composição de Clientes das Lojas dado a segmentação adotada (FÃS, PREMIUMS etc)', url:'https://colab.research.google.com/drive/1VhV6fBvGC1QnEz7Lrqedr6NzwY631Gpi#scrollTo=D_PrNp0pGqYt' },
+                  { title:'Análise da Participação dos Clusters nas Vendas das Lojas', desc:'Analisa a composição de Clientes das Lojas dado a segmentação adotada (FÃS, PREMIUMS etc)', url:'' },
                   { title:'Futuras Análises', desc:'', url:'' }
                 ]
               },
